--- a/.github/workflows/develop-ci.yml
+++ b/.github/workflows/develop-ci.yml
@@ -9,23 +9,8 @@ permissions:
   contents: read
 env:
   GO_VERSION: 1.23
-  APP_NAME: "hewpao-s-backend"
+  APP_NAME: "hewpao-s-frontend"
 jobs:
-  pre-test:
-    name: "Pre-Test"
-    runs-on: "ubuntu-latest"
-    steps:
-      - name: "Checkout"
-        uses: "actions/checkout@v4"
-
-      - name: "Setup Go"
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
-
-      - name: "Run Tests"
-        run: go test -v -cover ./usecase/
-
   build:
     name: "Build Dockerfile"
     runs-on: "ubuntu-latest"
@@ -41,4 +26,4 @@ jobs:
           IMAGE_TAG="${GITHUB_REF#refs/*/}"
           IMAGE_NAME="${{ secrets.DOCKER_USERNAME }}/${{ env.APP_NAME }}:${IMAGE_TAG}"
 
-          docker build -f docker/prod.Dockerfile -t "${IMAGE_NAME}" .
+          docker build -f Dockerfile -t "${IMAGE_NAME}" .
