--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -10,24 +10,9 @@ permissions:
 
 env:
   GO_VERSION: "1.23"
-  APP_NAME: "hewpao-s-backend"
+  APP_NAME: "hewpao-s-frontend"
 
 jobs:
-  pre-test:
-    name: Pre-Test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
-
-      - name: Run Tests
-        run: go test -v -cover ./usecase/
-
   build:
     name: Build & Push Docker Image
     runs-on: ubuntu-latest
